# toor

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  project.rs
tests/: integration.rs
