[package]
name = "toor"
version = "0.3.0"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["/README.md"]
keywords = ["cli", "root"]
license = "MIT"
repository = "https://github.com/azzamsa/toor"
rust-version = "1.80.0"
description = "Find project root"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
# cli
clap = { version = "4.5.13", features = ["derive"] }

# error
miette = { version = "7.2", features = ["fancy"] }
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0.15"
assert_fs = "1.1.2"
predicates = "3.1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
